[package]
name = "rust-bot"
version = "0.1.0"
authors = ["Pascal Stockert <pascal.stockert@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10.9"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread", "parking_lot"] }
